--- a/src/features/ac/AirConditioner.scss
+++ b/src/features/ac/AirConditioner.scss
@@ -3,6 +3,7 @@
 }
 
 .energy-saving-label {
+  color: black;
   opacity: 0.8;
   position: absolute;
   top: 10px;
@@ -35,13 +36,39 @@
   }
 }
 
-.ximalaya-text-link {
+.adsense-text-link {
   color: #63a5ef;
   text-decoration: none;
   cursor: pointer;
 }
 
-.ximalaya-logo {
-  margin: 12px;
+.adsense-logo {
+  margin-bottom: 10px;
   width: 56px;
+  font-size: 3.5rem;
+  animation: iconAnimate 1.5s ease-in-out infinite;
+}
+
+@keyframes iconAnimate {
+  0%,
+  100% {
+    transform: scale(1);
+  }
+
+  10%,
+  30% {
+    transform: scale(0.9);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: scale(1.1);
+  }
+
+  50%,
+  70% {
+    transform: scale(1.1);
+  }
 }
